--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -4,11 +4,10 @@ icon: fa-user
 order: 3
 ---
 
-<a href="#" class="image featured"><img src="assets/images/pic08.jpg" alt="" /></a>
+<a href="#" class="image featured"><img src="assets/images/avatar.jpg" alt="" /></a>
 
-<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
-ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
-laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem
-parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper
-dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
-ornare iaculis.</p>
+<p>I'm a keen adventurer.</p>
+
+<p>I've previously done Radio, Caving, Software Development, Community Management and Sex Education.</p>
+
+<p>If you have suggestions on what to try next, let me know!</p>
