--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -6,8 +6,6 @@ order: 3
 
 <a href="#" class="image featured"><img src="assets/images/avatar.jpg" alt="" /></a>
 
-<p>I'm a keen adventurer.</p>
-
-<p>I've previously done Radio, Caving, Software Development, Community Management and Sex Education.</p>
+<p>I'm currently an Adventurer and Software Developer but have previously dabbled as a Radio and Television Host, Community Manager, Effective Altruist and Sex Educator.</p>
 
 <p>If you have suggestions on what to try next, let me know!</p>
