Update Birthday with direct forwarding link

--- a/birthday.html
+++ b/birthday.html
@@ -7,6 +7,8 @@ icon: fa-user
 title: Birthday
 hide: true
 exclude: yes
+redirect_to:
+  - https://docs.google.com/forms/d/e/1FAIpQLSfLQiP2X-lMmZStS1K7bRCs1FfZuOQPWjjxhVBv0ATDsbEgWA/viewform
 ---
 
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfLQiP2X-lMmZStS1K7bRCs1FfZuOQPWjjxhVBv0ATDsbEgWA/viewform?embedded=true" width="700" height="520" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
