--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -4,6 +4,7 @@ icon: fa-user
 order: 3
 ---
 
-<p>I'm currently an Adventurer and Software Developer but have previously dabbled as a Radio and Television Host, Community Manager, Effective Altruist and Sex Educator.</p>
+<p>I'm currently an Adventurer and Software Developer but have previously dabbled as a Radio and Television Host,
+  Community Manager, Foresight Strategist, Board Game Designer, Effective Altruist and Sex Educator.</p>
 
 <p>If you have suggestions on what to try next, let me know!</p>
