Update role to Software Engineer

--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -4,7 +4,7 @@ icon: fa-user
 order: 3
 ---
 
-<p>I'm currently an Adventurer and Software Developer but have previously dabbled as a Radio and Television Host,
+<p>I'm currently an Adventurer and Software Engineer but have previously dabbled as a Radio and Television Host,
   Community Manager, Foresight Strategist, Flashmob Coordinator, Board Game Designer, Effective Altruist and Sex
   Educator.</p>
 
