Update birthday link to 2020 form

--- a/birthday.html
+++ b/birthday.html
@@ -8,7 +8,9 @@ title: Birthday
 hide: true
 exclude: yes
 redirect_to:
-  - https://docs.google.com/forms/d/e/1FAIpQLSfLQiP2X-lMmZStS1K7bRCs1FfZuOQPWjjxhVBv0ATDsbEgWA/viewform
+- https://docs.google.com/forms/d/e/1FAIpQLSfXWVgz5vrCOvINUh54Uwg2coXP0BIIsf7sIoA2DGaNda1EvQ/viewform
 ---
 
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfLQiP2X-lMmZStS1K7bRCs1FfZuOQPWjjxhVBv0ATDsbEgWA/viewform?embedded=true" width="700" height="520" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+<iframe
+  src="https://docs.google.com/forms/d/e/1FAIpQLSfXWVgz5vrCOvINUh54Uwg2coXP0BIIsf7sIoA2DGaNda1EvQ/viewform?embedded=true"
+  width="700" height="520" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
